--- a/styles/detail.css
+++ b/styles/detail.css
@@ -4,6 +4,13 @@ html, body {
     width: 100%;
 }
 
+body {
+    background-color: #e0e0e0;
+}
+
+header, footer{
+    background-color: rosybrown;
+}
 
 .logo {
     width: 60px;
@@ -11,10 +18,18 @@ html, body {
 }
 
 .radisson {
+    margin: 2% 4% 0 4%;
     width: 500px;
     height: 500px;
 }
 
+.form-div {
+    margin: 0 4% 1% 4%;
+}
+
+.desc-div {
+    margin: 1% 4% 2% 4%;
+}
 #socialmedia img {
     width: 22px;
     height: 20px;
