--- a/styles/detail.css
+++ b/styles/detail.css
@@ -10,11 +10,48 @@ body {
 
 header, footer{
     background-color: rosybrown;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    position: sticky;
+    width: 100%;
+    z-index: 10;
+}
+footer {
+    bottom: 0;
+    left: 0;
 }
 
-.logo {
+header {
+    top: 0;
+    left: 0;
+}
+
+.logo, .login {
     width: 60px;
     height: 60px;
+    vertical-align: middle;
+    align-content: center;
+   
+}
+
+#contact-div {
+    margin-left: 10px;
+    vertical-align: middle;
+    align-content: center;  
+}
+
+#socialmedia{
+    float:right;
+    vertical-align: middle;
+    align-content:center;
+    margin-right: 10px;
+}
+
+#copyright-div {
+    vertical-align: text-bottom;
+    align-content:end;
+   
 }
 
 .radisson {
@@ -33,4 +70,9 @@ header, footer{
 #socialmedia img {
     width: 22px;
     height: 20px;
+}
+
+a { 
+    color: black;
+    text-decoration: none;
 }
