--- a/styles/index.css
+++ b/styles/index.css
@@ -1,11 +1,29 @@
 html, body {
     margin: 0;
-    min-height: 100%;
     width: 100%;
     min-height: auto;
+    display: flex;
+    flex-direction: column;
 }
+
 header, footer{
     background-color: rosybrown;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    position: sticky;
+    width: 100%;
+    z-index: 10;
+}
+
+footer {
+    bottom: 0;
+    left: 0;
+}
+
+header {
+    top: 0;
+    left: 0;
 }
 
 body {
@@ -18,12 +36,55 @@ body {
     background-repeat: no-repeat ;
     background-position: center center;
     background-size: cover;
+    align-content: center;
+    text-align: center;
     
 }
+ #view-div {
+    vertical-align: middle;
+    align-content: center;
+    text-align: center;
+    margin-bottom: 25px;
+ }
 
-.logo {
+input {
+    border: 1px transparent solid;
+    background-color:  #f1f1f1;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 12px;
+    width: 350px;
+}
+.logo, .login {
     width: 60px;
     height: 60px;
+    vertical-align: middle;
+    align-content: center;
+}
+
+a { 
+    color: black;
+    text-decoration: none;
+}
+
+
+#contact-div {
+    margin-left: 10px;
+    vertical-align: middle;
+    align-content: center;  
+}
+
+#socialmedia{
+    float:right;
+    vertical-align: middle;
+    align-content:center;
+    margin-right: 10px;
+}
+
+#copyright-div {
+    vertical-align: text-bottom;
+    align-content:end;
+   
 }
 
 .city img {
