--- a/styles/list.css
+++ b/styles/list.css
@@ -6,26 +6,88 @@ html, body {
 
 header, footer{
     background-color: rosybrown;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    position: sticky;
+    width: 100%;
+    z-index: 10;
+}
+footer {
+    bottom: 0;
+    left: 0;
+}
+
+header {
+    top: 0;
+    left: 0;
+}
+ul {
+    text-align: center;
+    top: 0;
+    left: 0;
+}
+li {
+    display: inline-block;
+   margin: 10px;
+    font-weight: bold;
+}
+
+a { 
+    color: black;
+    text-decoration: none;
 }
 
 body {
     background-color: #e0e0e0;
 }
 
-.logo {
+.logo, .login {
     width: 60px;
     height: 60px;
+    vertical-align: middle;
+    align-content: center;
+   
 }
+
+#contact-div {
+    margin-left: 10px;
+    vertical-align: middle;
+    align-content: center;  
+}
+
+#socialmedia{
+    float:right;
+    vertical-align: middle;
+    align-content:center;
+    margin-right: 10px;
+}
+
+#copyright-div {
+    vertical-align: text-bottom;
+    align-content:end;
+   
+}
+
 
 #list-view img {
     width: 250px;
     height: 200px;
 }
 
+#list-view {
+    margin-left: 20px;
+}
+
 .hotel-div {
-    width: 40%;
+    width: 85%;
     margin: 2%;
     background-color: rgb(132,136,139);
+}
+
+#desc {
+   margin-top: 10px;
+    align-content: center;
 }
 
 #socialmedia img {
