--- a/styles/payment.css
+++ b/styles/payment.css
@@ -8,11 +8,58 @@ html, body {
 
 header, footer{
     background-color: rosybrown;
+    display: flex;
+    justify-content: space-between;
+    height: 60px;
+    position: sticky;
+    width: 100%;
+    z-index: 10;
 }
 
-.logo {
+footer {
+    bottom: 0;
+    left: 0;
+}
+
+header {
+    top: 0;
+    left: 0;
+}
+
+.logo, .login {
     width: 60px;
     height: 60px;
+    vertical-align: middle;
+    align-content: center;
+   
+}
+
+#contact-div {
+    margin-left: 10px;
+    vertical-align: middle;
+    align-content: center;  
+}
+
+#socialmedia{
+    float:right;
+    vertical-align: middle;
+    align-content:center;
+    margin-right: 10px;
+}
+
+#copyright-div {
+    vertical-align: text-bottom;
+    align-content:end;
+   
+}
+
+a { 
+    color: black;
+    text-decoration: none;
+}
+#pay {
+    
+    margin-bottom: 30px;
 }
 
 .radisson-div {
