--- a/styles/index.css
+++ b/styles/index.css
@@ -40,6 +40,11 @@ body {
     text-align: center;
     
 }
+
+#search-bar input[type="text"]:focus {
+    outline: none;
+ }
+
  #view-div {
     vertical-align: middle;
     align-content: center;
@@ -55,9 +60,16 @@ input {
     border-radius: 12px;
     width: 350px;
 }
-.logo, .login {
+.logo {
     width: 60px;
     height: 60px;
+    margin-left: 1%;
+}
+.login {
+     margin-right: 2%;
+}
+.logo, .login {
+   
     vertical-align: middle;
     align-content: center;
 }
@@ -69,7 +81,7 @@ a {
 
 
 #contact-div {
-    margin-left: 10px;
+    margin-left: 2%;
     vertical-align: middle;
     align-content: center;  
 }
@@ -78,31 +90,61 @@ a {
     float:right;
     vertical-align: middle;
     align-content:center;
-    margin-right: 10px;
+    margin-right: 2%;
 }
 
 #copyright-div {
     vertical-align: text-bottom;
-    align-content:end;
+    align-content:center;
    
 }
 
-.city img {
+ .city-flex .city img {
+    
     width: 150px;
     height: 150px;
-    padding: 4%;
+   
     border-radius: 25%;
+    box-shadow: 10px 10px 10px grey;
+
 }
 
 .city {
-    margin-left: 15%;
-    margin-right: 15%;
+    position: relative;
+    width: fit-content;
+    height: fit-content;
+}
+.city-flex {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    margin: 5% 10%;
+   
 }
 
 #socialmedia img {
     width: 22px;
     height: 20px;
+}
+
+.img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 25%;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    opacity: 0;
+  
+}
+
+.img-overlay:hover {
+    opacity: 1;
 }
