--- a/styles/detail.css
+++ b/styles/detail.css
@@ -2,6 +2,9 @@ html, body {
     margin: 0;
     height: 100%;
     width: 100%;
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 body {
@@ -20,19 +23,50 @@ header, footer{
 footer {
     bottom: 0;
     left: 0;
+    margin-top: 50px;
 }
+
+label {
+    margin: 10px;
+}
+
+
+.modal-body {
+   align-content: center;
+   width: 100%;
+}
+
+.modal-header {
+    font-family: "Comic Sans MS";
+}
+
+.modal-backdrop {
+    position: relative;
+    z-index: -1
+ }
 
 header {
     top: 0;
     left: 0;
 }
 
-.logo, .login {
+.logo {
     width: 60px;
     height: 60px;
+    margin-left: 1%;
+}
+.login {
+     margin-right: 2%;
+}
+.logo, .login {
+   
     vertical-align: middle;
     align-content: center;
-   
+}
+
+a { 
+    color: black;
+    text-decoration: none;
 }
 
 #contact-div {
@@ -62,7 +96,11 @@ header {
 
 .form-div {
    width: 25%;
-   
+   text-align: left;  
+}
+
+#btn1 {
+  text-align: center;
 }
 
 .booking-div input:focus {
@@ -99,12 +137,16 @@ a {
    text-align: center;
 }
 
-
+.form-horizontal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
 
 .form-row {
     display: flex;
     justify-content: center;
-    padding: .5em;
     margin: 15px;
   }
   .form-row > label {
@@ -123,3 +165,5 @@ a {
    border: 0;
    align-content: flex-start;
   }
+
+  
