--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,7 @@
 html, body {
     margin: 0;
     width: 100%;
+    height: 100%;
     min-height: auto;
     display: flex;
     flex-direction: column;
@@ -15,6 +16,33 @@ header, footer{
     width: 100%;
     z-index: 10;
 }
+
+label {
+    margin: 10px;
+}
+
+
+.modal-body {
+   align-content: center;
+   width: 100%;
+}
+
+.modal-header {
+    font-family: "Comic Sans MS";
+}
+
+.form-horizontal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+}
+.modal-backdrop {
+    position: relative;
+    z-index: -1
+ }
+
+ 
 
 footer {
     bottom: 0;
@@ -142,7 +170,7 @@ a {
     justify-content: center;
     
     opacity: 0;
-  
+    transition: opacity 0.3s ease-in;
 }
 
 .img-overlay:hover {
